<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:id="@+id/pref_ft_src_dir"
        android:capitalize="words"
        android:defaultValue="@string/pref_ft_src_dir"
        android:inputType="textCapWords"
        android:key="src_dir_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_ft_src_dir"
        android:title="@string/pref_ft_src_summary" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="def_success_switch"
        android:summary="@string/pref_ft_del_after_summary"
        android:title="@string/pref_ft_del_after_success" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ft_conn_ip"
        android:inputType="textCapWords"
        android:key="conn_ip_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_ft_conn_ip"
        android:title="@string/pref_ft_conn_ip_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_ft_conn_port"
        android:inputType="textCapWords"
        android:key="conn_port_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_ft_conn_port"
        android:title="@string/pref_ft_conn_port_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
